correct spacing

--- a/assets/styles/style-clean.css
+++ b/assets/styles/style-clean.css
@@ -53,6 +53,9 @@ img {
 .img-responsive {
     width: 100%;
 }
+.section-header h3 {
+    margin-bottom: 2rem;
+}
 /* some movement */
 .enter-in {
     animation: enter-anim 1s cubic-bezier(.7, 0, .3, 1) forwards;
